Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/Vendor_Details__c.object-meta.xml
<CustomObject>
    <label>Vendor Details</label>
    <nameField>
        <label>Vendor Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>