Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/Board_4X2__c.field-meta.xml
<CustomField>
    <fullName>Board_4X2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Board_4X2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>