Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/Board_6X3__c.field-meta.xml
<CustomField>
    <fullName>Board_6X3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Board_6X3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>