Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <formula>Vendor__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>