Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor</description>
    <inlineHelpText>Vendor</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vendor_Details</relationshipName>
    <type>Lookup</type>
</CustomField>