Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/Vendor_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Cluster__c</fullName>
    <label>Vendor Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AHMEDABAD</fullName>
            </value>
            <value>
                <fullName>ALLAHABAD</fullName>
            </value>
            <value>
                <fullName>AMARAVATHI</fullName>
            </value>
            <value>
                <fullName>AMBIKAPUR</fullName>
            </value>
            <value>
                <fullName>AMRITSAR</fullName>
            </value>
            <value>
                <fullName>BANGALORE</fullName>
            </value>
            <value>
                <fullName>BARODA</fullName>
            </value>
            <value>
                <fullName>BATHINDA</fullName>
            </value>
            <value>
                <fullName>BELGAUM</fullName>
            </value>
            <value>
                <fullName>BHOPAL</fullName>
            </value>
            <value>
                <fullName>BHANDARA</fullName>
            </value>
            <value>
                <fullName>BIJAPUR</fullName>
            </value>
            <value>
                <fullName>BIKANER</fullName>
            </value>
            <value>
                <fullName>BILASPUR</fullName>
            </value>
            <value>
                <fullName>BLR ZONE</fullName>
            </value>
            <value>
                <fullName>CENTRAL BIHAR</fullName>
            </value>
            <value>
                <fullName>CHENNAI</fullName>
            </value>
            <value>
                <fullName>COIMBATORE</fullName>
            </value>
            <value>
                <fullName>DELHI-NCR</fullName>
            </value>
            <value>
                <fullName>DEL-PROJECT</fullName>
            </value>
            <value>
                <fullName>DURG</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
            <value>
                <fullName>GORAKHPUR</fullName>
            </value>
            <value>
                <fullName>GUWAHATI</fullName>
            </value>
            <value>
                <fullName>GWALIOR</fullName>
            </value>
            <value>
                <fullName>HIMACHAL PRADESH</fullName>
            </value>
            <value>
                <fullName>HISSAR</fullName>
            </value>
            <value>
                <fullName>HUBLI</fullName>
            </value>
            <value>
                <fullName>HYDERABAD</fullName>
            </value>
            <value>
                <fullName>INDORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>