Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/vendor_cluster_active__c.field-meta.xml
<CustomField>
    <fullName>vendor_cluster_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>vendor cluster active</label>
    <type>Checkbox</type>
</CustomField>