Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <description>Vendor Code</description>
    <inlineHelpText>Vendor Code</inlineHelpText>
    <label>Vendor Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>