Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/fields/Vendor_email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_email__c</fullName>
    <formula>Vendor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor email</label>
    <type>Text</type>
</CustomField>