Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Cluster__c</columns>
    <columns>Primary_Vendor__c</columns>
    <columns>Vendor_Code__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>