Partial_14Dec2021/force-app/main/default/objects/Vendor_Details__c/listViews/test_sfdc.listView-meta.xml
<ListView>
    <fullName>test_sfdc</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Vendor_Cluster__c</columns>
    <columns>vendor_cluster_active__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>test sfdc</label>
</ListView>